Increase col-1 position to ensure it is off screen when animation begins

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -209,7 +209,7 @@ h3 {
 
 .builds {
   position: absolute;
-  left: -300px;
+  left: -350px;
   transition: 1s;
   padding: 10px 20px 10px;
 }
